--- a/views/acl/lock.hbs
+++ b/views/acl/lock.hbs
@@ -15,12 +15,16 @@
 					</div>	
 				</div>
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<div class="unlock-form">
+					<form method="post" action="checkpin" class="unlock-form">
 						<br/>
 						<h5>{{user.name}}</h5>
 						<input type="hidden" class="form-control" name="uid" id="uid" value="{{user.uid}}">
-						<input type="password" maxlength="6" class="form-control" id="pinInput" placeholder="{{{__ 'Enter your password or pincode here...'}}}">
+						<input type="password" maxlength="6" class="form-control" name="pin" id="pinInput" placeholder="{{{__ 'Enter your password or pincode here...'}}}">
+					<div class="row">
+					<br/>
+					<a href="/logout" class="btn btn-sm btn-primary">Logout</a>
 					</div>
+					</form>
 				</div>
 			</div>
 			
