--- a/views/admin/settings.hbs
+++ b/views/admin/settings.hbs
@@ -8,10 +8,18 @@
 
     <ul class="cd-tabs-content">
         <li data-content="global" class="selected">
+           <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             ................
+            </div>
+           </div>
         </li>
         <li data-content="storage">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             ................
+            </div>
+           </div>
         </li>
     </ul> <!-- cd-tabs-content -->
 </div> <!-- cd-tabs -->
