--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -11,7 +11,11 @@
     <div class="row">     
       <div class="col-md-4">
       <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12" id="profile-image" data-img="{{user.avatar}}" data-x="" data-y="" data-width="" data-height="" data-user="{{user.uid}}">
-      <img src="/uploads/avatar/{{user.avatar}}"  width="100%" class="img-responsive img-thumbnail"/>
+      {{#if user.avatar}}
+        <img src="/uploads/avatar/{{user.avatar}}"  width="100%" class="img-responsive img-thumbnail"/>
+      {{else}}
+      <svg  class="icon-id-8" style="height:100%;width:100%;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/fonts/icons.svg#icon-id-8"></use></svg>
+      {{/if}}
       </div>
       <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12" id="profile-quote">
         <blockquote>{{user.info.quote}}</blockquote>
