--- a/config/theme/css/user-profile.css
+++ b/config/theme/css/user-profile.css
@@ -2,7 +2,7 @@
 * @Author: JB Stoker
 * @Date:   2016-01-27
 * @Last Modified by:   JB Stoker
-* @Last Modified time: 2016-05-28 16:35:57
+* @Last Modified time: 2016-05-31 21:22:58
 */
 /*Save Changes buttons */
 #saveChanges{
@@ -115,6 +115,8 @@ ul.details li input {
 
 .info-text p{
     word-break: break-word;
+    -ms-word-wrap: break-word;
+    white-space: normal; 
 } 
 
 
