fixing i18n added alert fix fixed lock issue added password, login , pincode change

--- a/views/acl/lock.hbs
+++ b/views/acl/lock.hbs
@@ -22,7 +22,7 @@
 						<input type="password" maxlength="6" class="form-control" name="pin" id="pinInput" placeholder="{{{__ 'Enter your password or pincode here...'}}}">
 					<div class="row">
 					<br/>
-					<a href="/logout" class="btn btn-sm btn-primary">Logout</a>
+					<a href="/logout" class="btn btn-sm btn-primary">{{{__ 'Logout'}}}</a>
 					</div>
 					</form>
 				</div>
