--- a/views/layouts/partials/alerts.hbs
+++ b/views/layouts/partials/alerts.hbs
@@ -18,7 +18,7 @@
 	{{else}}
 	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-success alert-container" role="alert">
 			<span data-notify="icon"></span>
-			<span data-notify="title"><strong>Success!</strong></span>
+			<span data-notify="title"><strong>{{{__ 'Success'}}}!</strong></span>
 			<span data-notify="message">{{success}}</span> 
 		</div>
 	{{/if}}
@@ -43,7 +43,7 @@
 	{{else}}
 	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-danger alert-container" role="alert">
 		<span data-notify="icon"></span>
-		<span data-notify="title"><strong>Error!</strong></span>
+		<span data-notify="title"><strong>{{{__ 'Error'}}}!</strong></span>
 		<span data-notify="message">{{error}}</span>
 	</div>
 	{{/if}}
@@ -69,7 +69,7 @@
 	{{else}}
 	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-warning alert-container" role="alert">
 		<span data-notify="icon"></span>
-		<span data-notify="title"><strong>Warning!</strong></span>
+		<span data-notify="title"><strong>{{{__ 'Warning'}}}!</strong></span>
 		<span data-notify="message">{{warning}}</span> 
 	</div>	
 	{{/if}}
@@ -94,7 +94,7 @@
 	{{else}}
 	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-info alert-container" role="alert">
 		<span data-notify="icon"></span>
-		<span data-notify="title"><strong>Info!</strong></span>
+		<span data-notify="title"><strong>{{{__ 'Info'}}}!</strong></span>
 		<span data-notify="message">{{info}}</span> 
 	</div>
 	{{/if}}
